docker-ks/bash.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: bash
  name: bash
spec:
  containers:
  - command: ["bin/sh","-c","echo ${wine}; sleep 3600"]
    image: bash
    name: bash
    volumeMounts:
    - mountPath: /tmp/secret1
      name: foo
      readOnly: true
  volumes:
  - name: foo
    secret:
      secretName: secret1
