docker-ks/command.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busycommand
  name: busycommand
  namespace: "140"
spec:
  containers:
  - command:
    - sleep
    - "20"
    - ls
    image: busybox
    name: busycommand
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
