docker-ks/nginxpod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-pod
  name: nginx-pod
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: size
            operator: In 
            values: ["large1"]
  containers:
  - image: nginx
    name: nginx-pod
      #  tolerations:
      #  - key: "my-key"
      #    operator: "Equal"
      #    value: "my-value"  
      #    effect: "NoSchedule"
