docker-ks/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: front-end
  name: pod-name
spec:
  containers:
  - image: nginx
    name: $POD_NAME
    command: ["bin/sh", "-c", "printenv"]  
    ports:
    - containerPort: $PORT_NUM
