docker-ks/twopods-b.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: twopods
  name: twopods
spec:
  volumes:
  - name: logs
    emptyDir: {}
  containers:
    #- image: bash
    #name: sidecar
    #command: ["bin/sh", "-c", "tail -f /var/log/access.log"]  
    #volumeMounts:
    #- mountPath: /var/log/nginx
    #  name: logs
  - image: nginx
    name: twopods
    volumeMounts:
    - mountPath: /var/log/
      name: logs  
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
