docker-ks/twopods.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: twopods
  name: twopods
spec:
  volumes:
  - name: logs
    emptyDir: {}
  containers:
  - image: nginx
    name: twopods
