docker-ks/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: my-pod
  name: my-pod-svc
spec:
  ports:
  - nodePort: 31067
    port: 80
    targetPort: 80
  selector:
    run: my-pod
  type: NodePort
